# opti-fe-migrate

./: Dockerfile  README.md  digest.txt  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  streamlit_app.py  test.ipynb
agent/: css_utilities.py  nodes.py  prompts.py  state_utils.py  states.py  tools.py
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Contact.tsx  Features.tsx  Footer.tsx  Hero.tsx  MobileMenu.tsx  Nav.tsx  NexusEffects.tsx  Pricing.tsx  ScrollReveal.tsx  Stats.tsx
target_migrate/templatemo_594_nexus_flow/src/app/: globals.css  page.tsx
target_migrate/templatemo_594_nexus_flow/src/app/components/: ContactSection.tsx  EffectsClient.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  PricingSection.tsx
target_migrate/templatemo_597_neural_glass/src/app/: page.tsx  scripts.tsx
target_migrate/templatemo_597_neural_glass/src/components/: Contact.tsx  Footer.tsx  Hero.tsx  Showcase.tsx
target_migrate/templatemo_597_neural_glass/templatemo_594_nexus_flow_v1/: tsconfig.json
template_pages/templatemo_594_nexus_flow/src/app/: layout.tsx
template_pages/templatemo_597_neural_glass/src/app/: globals.css  layout.tsx  page.tsx
template_pages/templatemo_597_neural_glass/src/components/: ClientEffects.tsx  Contact.tsx  Features.tsx  Footer.tsx  Header.tsx  NeuralBackground.tsx  Showcase.tsx  Timeline.tsx
templatemo_594_nexus_flow_v1/: package.json  tailwind.config.ts
templatemo_594_nexus_flow_v1/src/app/: globals.css  page.tsx
(+5 files in other folders)
