[project]
name = "optimizely-fe-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "gitingest>=0.3.1",
    "langchain-community>=0.3.29",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.33",
    "langgraph>=0.6.7",
    "langgraph-store-mongodb>=0.1.0",
]
